# 222

./: .coze  .gitignore  AGENTS.md  README.md  架构文档模板.md
vps-gateway/: .coze  .env.example  AGENTS.md  README.md  pyproject.toml
vps-gateway/.data/chroma/: chroma.sqlite3
vps-gateway/app/: main.py
vps-gateway/app/application/: active_turn_gate.py  app.py  model_tool_loop.py  outbox_longpoll_service.py  schedule_admission_policy.py  single_reader_gate.py  turn_runner.py  wake_controller.py  wake_planner.py  wake_start_policy.py
vps-gateway/app/infrastructure/: config.py  logging.py
vps-gateway/data/: memory.sqlite3  outbox.sqlite3  outbox.sqlite3-shm  outbox.sqlite3-wal  outbox_smoke.sqlite3  wake_jobs.sqlite3
vps-gateway/docs/plans/: M1-sample-repository.md  M2-context-builder-upstream.md  M3-chat-completions.md  M4-outbox-store.md  M5-local-scheduler.md  M6-deploy-smoke.md
vps-gateway/samples/: identity.sample.json  memories.sample.json  preferences.sample.json  working_state.sample.json
vps-gateway/scripts/: http_run.sh  setup.sh  smoke_test_memory.py  smoke_test_real_api.py
vps-gateway/tests/integration/: test_active_turn_e2e.py  test_backend_integration.py  test_chat_api.py  test_context_to_upstream.py  test_file_sample_repository.py  test_m7_concurrency.py  test_outbox_controller.py  test_sqlite_outbox_store.py
vps-gateway/tests/smoke/: test_real_api_smoke.py
vps-gateway/tests/unit/: test_auth.py  test_chat_completion_validation.py  test_config.py  test_config_validation.py  test_context_build.py  test_context_xml.py  test_identity_model.py  (+20 more)
(+171 files in other folders)
