[project]
name = "vps-gateway"
version = "0.1.0"
description = "VPS 中转网关 — OpenAI Chat 兼容的状态注入 API 服务"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.2.2",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
